Added custom model data support and fixed MiniMessage support